[package]
name = "rust"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "number"
path = "src/number.rs"

[dependencies]
chrono = "0.4.39"
serde_json = "1.0.139"
serde = {version = "1.0.218", features = ["derive"]}
quote = "1.0.40"
syn = { version = "2.0", features = ["full"] }

[lib]
proc-macro = true

